--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <div id="score">SCORE: 0</div>
     <div id="coins" style="opacity:.85;font-size:12px;margin-top:4px;">COINS: 0</div>
     <div id="best" style="opacity:.75;font-size:12px;margin-top:4px;">BEST: 0</div>
+    <div id="plays" style="opacity:.75;font-size:12px;margin-top:4px;">PLAYS: -</div>
   </div>
   <div class="right">
     <button id="btnBgm" class="btn" type="button">BGM: ON</button>
@@ -96,12 +97,11 @@
 <script>
 (() => {
   // ================================
-  // ★ プレイ回数カウント（/play）
+  // ★ プレイ回数カウント（/play + /stats）
   // ================================
   const WORKER_URL = "https://cool-bush-95d1.h6446123.workers.dev";
 
   function uuid() {
-    // crypto.randomUUID() が無い端末向けフォールバック
     if (crypto && crypto.randomUUID) return crypto.randomUUID();
     const a = new Uint8Array(16);
     (crypto && crypto.getRandomValues ? crypto.getRandomValues(a) : a.forEach((_,i)=>a[i]=Math.random()*256|0));
@@ -119,26 +119,34 @@
     playCounted = false;
   }
 
-  function recordPlayOnce() {
-  if (playCounted) return;
-  playCounted = true;
+  async function refreshPlays() {
+    try {
+      const r = await fetch(`${WORKER_URL}/stats`, { cache: "no-store", mode: "cors" });
+      const j = await r.json();
+      if (j && j.ok) playsEl.textContent = `PLAYS: ${j.plays}`;
+    } catch {}
+  }
 
-  fetch(`${WORKER_URL}/play?sid=${encodeURIComponent(playSid)}`, {
-    keepalive: true,
-    cache: "no-store",
-    mode: "cors",
-  })
-    .then(async (r) => {
-      const j = await r.json().catch(() => null);
-      if (!r.ok || !j) throw new Error("bad response");
-      stateEl.textContent = `PLAYS: ${j.plays} (sid: ${playSid.slice(0,8)})`;
+  function recordPlayOnce() {
+    if (playCounted) return;
+    playCounted = true;
+
+    playsEl.textContent = `PLAYS: ... (${playSid.slice(0,8)})`;
+
+    fetch(`${WORKER_URL}/play?sid=${encodeURIComponent(playSid)}`, {
+      keepalive: true,
+      cache: "no-store",
+      mode: "cors",
     })
-    .catch(() => {
-      stateEl.textContent = `PLAY COUNT FAIL (sid: ${playSid.slice(0,8)})`;
-      // 失敗しても次のタップで再送できるように戻す
-      playCounted = false;
-    });
-}
+      .then(r => r.json())
+      .then(j => {
+        playsEl.textContent = `PLAYS: ${j.plays}`;
+      })
+      .catch(() => {
+        playsEl.textContent = `PLAYS: ERR`;
+        playCounted = false; // 次のタップで再送できるように
+      });
+  }
 
   // ===== Canvas setup (retina対応) =====
   const canvas = document.getElementById("c");
@@ -159,6 +167,7 @@
   const scoreEl = document.getElementById("score");
   const coinsEl = document.getElementById("coins");
   const bestEl  = document.getElementById("best");
+  const playsEl = document.getElementById("plays");
   const stateEl = document.getElementById("state");
   const panel   = document.getElementById("panel");
   const panelTitle = document.getElementById("panelTitle");
@@ -169,7 +178,7 @@
   let bestScore = Number(localStorage.getItem(BEST_KEY) || 0);
   bestEl.textContent = "BEST: " + bestScore;
 
-  // ===== Audio (iPhone向け: 最初のタップで確実に起動) =====
+  // ===== Audio =====
   const audio = {
     ctx: null,
     master: null,
@@ -327,7 +336,7 @@
   function showPanel(v) { panel.style.display = v ? "block" : "none"; }
 
   function reset() {
-    // ★ 新しいプレイとして数える準備（まだ送信しない）
+    // ★ 次プレイ用 sid を必ず更新
     newPlaySession();
 
     score = 0;
@@ -360,6 +369,9 @@
     stateEl.textContent = "READY";
     scoreEl.textContent = "SCORE: 0";
     coinsEl.textContent = "COINS: 0";
+
+    // いまの総プレイ回数を表示（通信できる時だけ更新）
+    refreshPlays();
   }
 
   // ===== Spawning =====
@@ -403,37 +415,36 @@
 
   // ===== Input =====
   function requestJump() {
-  // GAME OVER中のタップは「リセットして即スタート」にする（1タップで次プレイ開始）
-  if (gameOver) {
-    reset();
-    ensureObstacles();
+    // GAME OVER中のタップは「リセットして即スタート」（1タップで次プレイ開始）
+    if (gameOver) {
+      reset();
+      ensureObstacles();
 
-    started = true;
-    running = true;
-    showPanel(false);
-    stateEl.textContent = "";
+      started = true;
+      running = true;
+      showPanel(false);
+      stateEl.textContent = "";
 
-    // ★ここで必ず次プレイの /play を1回だけ送る
-    recordPlayOnce();
+      // ★ 次プレイ開始として1回だけ送信
+      recordPlayOnce();
+
+      player.jumpBuffer = 0.12;
+      return;
+    }
+
+    // 初回スタート
+    if (!started) {
+      started = true;
+      running = true;
+      showPanel(false);
+      stateEl.textContent = "";
+
+      // ★ プレイ開始として1回だけ送信
+      recordPlayOnce();
+    }
 
     player.jumpBuffer = 0.12;
-    return;
   }
-
-  // 初回スタート
-  if (!started) {
-    started = true;
-    running = true;
-    showPanel(false);
-    stateEl.textContent = "";
-
-    // ★プレイ開始を1回だけ送る
-    recordPlayOnce();
-  }
-
-  player.jumpBuffer = 0.12;
-}
-
 
   function onDown(e) {
     e.preventDefault();
@@ -576,6 +587,7 @@
     ctx.fillStyle = "#0b0f1a";
     ctx.fillRect(0,0,w,h);
 
+    // stars
     ctx.fillStyle = "#ffffff";
     const starCount = 70;
     const t = performance.now() * 0.00005;
@@ -588,11 +600,13 @@
     }
     ctx.globalAlpha = 1;
 
+    // ground
     ctx.fillStyle = "#101a33";
     ctx.fillRect(0, gy, w, h-gy);
     ctx.fillStyle = "rgba(255,255,255,.08)";
     ctx.fillRect(0, gy, w, 2);
 
+    // coins
     for (const c of coins) {
       ctx.globalAlpha = 0.9;
       ctx.fillStyle = "rgba(255,215,64,.20)";
@@ -612,6 +626,7 @@
       ctx.globalAlpha = 1;
     }
 
+    // obstacles
     for (const ob of obstacles) {
       ctx.fillStyle = "rgba(90,170,255,.18)";
       ctx.fillRect(ob.x-3, ob.y-3, ob.w+6, ob.h+6);
@@ -621,6 +636,7 @@
       ctx.fillRect(ob.x+3, ob.y+3, Math.max(0, ob.w-6), 6);
     }
 
+    // player
     ctx.fillStyle = "rgba(255,255,255,.16)";
     ctx.fillRect(player.x-3, player.y-3, player.w+6, player.h+6);
 
@@ -656,5 +672,3 @@
 </script>
 </body>
 </html>
-
-
